Tests for geodatastore api