@@ -68,11 +68,17 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-
+<!--
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.0</version>
         </dependency>
 
         <dependency>
@@ -88,7 +94,7 @@
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
-
+<!--
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-core</artifactId>
@@ -130,6 +136,7 @@
             <version>${selenium.version}</version>
             <scope>test</scope>
         </dependency>
+        -->
 
 <!--
         <dependency>
@@ -199,6 +206,19 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <argLine>-Duser.language=en</argLine>
+                    <argLine>-Xmx1024m</argLine>
+                    <argLine>-XX:MaxPermSize=256m</argLine>
+                    <argLine>-Dfile.encoding=UTF-8</argLine>
+                    <useFile>false</useFile>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.4.0</version>
@@ -229,12 +249,13 @@
 
                         <argument>--glue</argument>
                         <argument>nl.kadaster.geodatastore.cucumbertest</argument>
-                        <argument>src/main/java/nl/kadaster/geodatastore</argument>
-                        <argument>src/main/resources/nl/kadaster/geodatastore/cucumbertest</argument>
+                        <argument>src/test/java/nl/kadaster/geodatastore</argument>
                         <argument>src/test/java/nl/kadaster/geodatastore/cucumbertest</argument>
+                        <argument>src/test/resources/cucumbertest</argument>
                     </arguments>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
